[gd_scene load_steps=2 format=3 uid="uid://bghnhrn6geaus"]

[ext_resource type="Script" path="res://menus/SignUp.gd" id="1_ofjwj"]

[node name="SignUp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofjwj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="StateLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Create an account"

[node name="EmailInput" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "email"

[node name="PasswordInput" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "password"

[node name="PasswrodInput2" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "password"

[node name="SignUpButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sign Up"

[node name="LoginLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Or login instead"

[node name="LoginButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Login"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/SignUpButton" to="." method="_on_sign_up_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
